k8s/namespaces/development/sonarqube/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sonarqube
  namespace: development
  labels:
    app.kubernetes.io/managed-by: flux
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Ingress for SonarQube web UI
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress
      ports:
        - port: 9000
          protocol: TCP
    # Monitoring
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - port: 9000
          protocol: TCP
    # Internal communication between SonarQube and Postgres
    - from:
        - podSelector:
            matchLabels:
              app: sonarqube
      ports:
        - port: 5432
          protocol: TCP
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarqube-postgres-17
      ports:
        - port: 9000
          protocol: TCP
  egress:
    # DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    # Internal communication between SonarQube and Postgres
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: sonarqube-postgres-17
      ports:
        - port: 5432
          protocol: TCP
    - to:
        - podSelector:
            matchLabels:
              app: sonarqube
      ports:
        - port: 9000
          protocol: TCP
    # Internet access for plugin downloads, updates
    - to:
        - namespaceSelector: {}
      ports:
        - port: 443
          protocol: TCP
        - port: 80
          protocol: TCP
